<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_bbc">

    <fragment
        android:id="@+id/nav_bbc"
        android:name="com.atish.navigationdrawer.ui.BBC.HomeFragment"
        android:label="@string/bcc"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_cnn"
        android:name="com.atish.navigationdrawer.ui.CNN.GalleryFragment"
        android:label="@string/cnn"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_sky"
        android:name="com.atish.navigationdrawer.ui.SKY.SlideshowFragment"
        android:label="@string/sky"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/aljazeeraFragment"
        android:name="com.atish.navigationdrawer.Fragment.AljazeeraFragment"
        android:label="@string/aljazeera"
        tools:layout="@layout/fragment_aljazeera" />
    <fragment
        android:id="@+id/foxNewsFragment"
        android:name="com.atish.navigationdrawer.Fragment.foxNewsFragment"
        android:label="@string/fox"
        tools:layout="@layout/fragment_fox_news" />


</navigation>